force-app/main/default/objects/PurchaseOrder__c/PurchaseOrder__c.object-meta.xml
<CustomObject>
    <label>注文書</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>注文書No.</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>