force-app/main/default/objects/PurchaseOrder__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>山本</description>
    <label>住所</label>
    <type>TextArea</type>
</CustomField>