force-app/main/default/objects/PurchaseOrder__c/fields/CarTax__c.field-meta.xml
<CustomField>
    <fullName>CarTax__c</fullName>
    <description>山本</description>
    <formula>CarTax_Billing__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>自動車税</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>