force-app/main/default/objects/PurchaseOrder__c/fields/CarTaxUnearned__c.field-meta.xml
<CustomField>
    <fullName>CarTaxUnearned__c</fullName>
    <description>山本</description>
    <formula>CarTaxUnearned_Billing__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>自動車税未経過相当額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>