force-app/main/default/objects/PurchaseOrder__c/fields/CarTaxUnearned_Billing__c.field-meta.xml
<CustomField>
    <fullName>CarTaxUnearned_Billing__c</fullName>
    <description>山本</description>
    <label>自動車税未経過相当額(請求)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>