force-app/main/default/objects/PurchaseOrder__c/fields/CarWeightTax__c.field-meta.xml
<CustomField>
    <fullName>CarWeightTax__c</fullName>
    <description>山本</description>
    <formula>CarWeightTax_Billing__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>自動車重量税</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>