force-app/main/default/objects/PurchaseOrder__c/fields/CarWeightTax_Billing__c.field-meta.xml
<CustomField>
    <fullName>CarWeightTax_Billing__c</fullName>
    <description>山本</description>
    <label>自動車重量税(請求)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>