force-app/main/default/objects/PurchaseOrder__c/fields/Decoration_Repair_Other_Billing__c.field-meta.xml
<CustomField>
    <fullName>Decoration_Repair_Other_Billing__c</fullName>
    <description>山本</description>
    <label>加装・加修・その他(請求)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>