force-app/main/default/objects/PurchaseOrder__c/fields/Delivery_cost_Billing__c.field-meta.xml
<CustomField>
    <fullName>Delivery_cost_Billing__c</fullName>
    <description>山本</description>
    <label>納車費用(請求)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>