force-app/main/default/objects/PurchaseOrder__c/fields/DesiredNumber_Billing__c.field-meta.xml
<CustomField>
    <fullName>DesiredNumber_Billing__c</fullName>
    <description>山本</description>
    <label>希望ナンバー(請求)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>