force-app/main/default/objects/PurchaseOrder__c/fields/EnvironmentalPerformancePercentage__c.field-meta.xml
<CustomField>
    <fullName>EnvironmentalPerformancePercentage__c</fullName>
    <description>山本</description>
    <formula>EnvironmentalPerformancePercentage_Bill__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>環境性能割</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>