force-app/main/default/objects/PurchaseOrder__c/fields/EnvironmentalPerformancePercentage_Bill__c.field-meta.xml
<CustomField>
    <fullName>EnvironmentalPerformancePercentage_Bill__c</fullName>
    <description>山本</description>
    <label>環境性能割(請求)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>