force-app/main/default/objects/PurchaseOrder__c/fields/FirstName__c.field-meta.xml
<CustomField>
    <fullName>FirstName__c</fullName>
    <description>山本</description>
    <label>名</label>
    <length>50</length>
    <type>Text</type>
</CustomField>