force-app/main/default/objects/PurchaseOrder__c/fields/ForwardingFee__c.field-meta.xml
<CustomField>
    <fullName>ForwardingFee__c</fullName>
    <description>山本</description>
    <label>回送費</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>