force-app/main/default/objects/PurchaseOrder__c/fields/GarageCertificateFee__c.field-meta.xml
<CustomField>
    <fullName>GarageCertificateFee__c</fullName>
    <description>山本</description>
    <formula>GarageCertificateFee_Billing__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>車庫証明費用</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>