force-app/main/default/objects/PurchaseOrder__c/fields/GarageCertificateFee_Billing__c.field-meta.xml
<CustomField>
    <fullName>GarageCertificateFee_Billing__c</fullName>
    <description>山本</description>
    <label>車庫証明費用(請求)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>