force-app/main/default/objects/PurchaseOrder__c/fields/GarageCertificateProcedure__c.field-meta.xml
<CustomField>
    <fullName>GarageCertificateProcedure__c</fullName>
    <description>山本</description>
    <label>車庫証明手続き</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>