force-app/main/default/objects/PurchaseOrder__c/fields/GarageCertificateProcedure_Billing__c.field-meta.xml
<CustomField>
    <fullName>GarageCertificateProcedure_Billing__c</fullName>
    <description>山本</description>
    <label>車庫証明手続き(請求)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>