force-app/main/default/objects/PurchaseOrder__c/fields/GrandTotal__c.field-meta.xml
<CustomField>
    <fullName>GrandTotal__c</fullName>
    <description>山本</description>
    <formula>VehiclePrice__c + RetailerOptions__c + ManufacturerOptions__c + Decoration_Repair_Other__c + CarTax__c + CarWeightTax__c + VehicleLiabilityInsuranc__c + EnvironmentalPerformancePercentage__c + TestRegistrationProcedure__c + GarageCertificateProcedure__c + TradeinCarProcedures__c + CarTaxUnearned__c + VehicleLiabilityInsurancUnearned__c + Delivery_cost__c + DesiredNumber__c + ForwardingFee__c + OutOfPrefectureRegistrationFee__c + GuaranteeSuccessionFee__c + TestRegistrationFee__c + GarageCertificateFee__c + TradeInVehicleExpenses__c + StampFee__c + RecyclingDeposit__c + LoanFee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>総計</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>