force-app/main/default/objects/PurchaseOrder__c/fields/GrandTotal_Billing__c.field-meta.xml
<CustomField>
    <fullName>GrandTotal_Billing__c</fullName>
    <description>山本</description>
    <formula>VehiclePrice_Billing__c + RetailerOptions_Billing__c + ManufacturerOptions_Billing__c + Decoration_Repair_Other_Billing__c + CarTax_Billing__c + CarWeightTax_Billing__c + VehicleLiabilityInsuranc_Billing__c + EnvironmentalPerformancePercentage_Bill__c + TestRegistrationProcedure_Billing__c + GarageCertificateProcedure_Billing__c + TradeinCarProcedures_Billing__c + CarTaxUnearned_Billing__c + VehicleLiabilityInsurancUnearned_Billing__c + Delivery_cost_Billing__c + DesiredNumber_Billing__c + Forwardingfee_Billing__c + OutOfPrefectureRegistrationFee_Billing__c + GuaranteeSuccessionFee_Billing__c + TestRegistrationFee_Billing__c + GarageCertificateFee_Billing__c + TradeInVehicleExpenses_Billing__c + StampFee_Billing__c + RecyclingDeposit_Billing__c + LoanFee_Billing__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>総計(請求)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>