force-app/main/default/objects/PurchaseOrder__c/fields/GrandTotal_Diff__c.field-meta.xml
<CustomField>
    <fullName>GrandTotal_Diff__c</fullName>
    <description>山本</description>
    <formula>GrandTotal_Billing__c - GrandTotal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>総計(差分)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>