force-app/main/default/objects/PurchaseOrder__c/fields/GuaranteeSuccessionFee_Billing__c.field-meta.xml
<CustomField>
    <fullName>GuaranteeSuccessionFee_Billing__c</fullName>
    <description>山本</description>
    <label>保証継承料(請求)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>