force-app/main/default/objects/PurchaseOrder__c/fields/LastName__c.field-meta.xml
<CustomField>
    <fullName>LastName__c</fullName>
    <description>山本</description>
    <label>姓</label>
    <length>50</length>
    <type>Text</type>
</CustomField>