force-app/main/default/objects/PurchaseOrder__c/fields/LoanFee__c.field-meta.xml
<CustomField>
    <fullName>LoanFee__c</fullName>
    <description>山本</description>
    <label>ローン手数料</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>