force-app/main/default/objects/PurchaseOrder__c/fields/ManufacturerOptions__c.field-meta.xml
<CustomField>
    <fullName>ManufacturerOptions__c</fullName>
    <description>山本</description>
    <label>メーカーオプション</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>