force-app/main/default/objects/PurchaseOrder__c/fields/Mileage__c.field-meta.xml
<CustomField>
    <fullName>Mileage__c</fullName>
    <description>山本</description>
    <label>走行距離</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>