force-app/main/default/objects/PurchaseOrder__c/fields/ModelYearPicklist__c.field-meta.xml
<CustomField>
    <fullName>ModelYearPicklist__c</fullName>
    <description>山本</description>
    <label>年式</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Model_Year</valueSetName>
    </valueSet>
</CustomField>