force-app/main/default/objects/PurchaseOrder__c/fields/OutOfPrefectureRegistrationFee__c.field-meta.xml
<CustomField>
    <fullName>OutOfPrefectureRegistrationFee__c</fullName>
    <description>山本</description>
    <label>県外登録費用</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>