force-app/main/default/objects/PurchaseOrder__c/fields/OutOfPrefectureRegistrationFee_Billing__c.field-meta.xml
<CustomField>
    <fullName>OutOfPrefectureRegistrationFee_Billing__c</fullName>
    <description>山本</description>
    <label>県外登録費用(請求)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>