force-app/main/default/objects/PurchaseOrder__c/fields/PostCode__c.field-meta.xml
<CustomField>
    <fullName>PostCode__c</fullName>
    <description>山本</description>
    <label>郵便番号</label>
    <length>8</length>
    <type>Text</type>
</CustomField>