force-app/main/default/objects/PurchaseOrder__c/fields/RecyclingDeposit__c.field-meta.xml
<CustomField>
    <fullName>RecyclingDeposit__c</fullName>
    <description>山本</description>
    <formula>RecyclingDeposit_Billing__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>リサイクル預託金</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>