force-app/main/default/objects/PurchaseOrder__c/fields/RecyclingDeposit_Billing__c.field-meta.xml
<CustomField>
    <fullName>RecyclingDeposit_Billing__c</fullName>
    <description>山本</description>
    <label>リサイクル預託金(請求)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>