force-app/main/default/objects/PurchaseOrder__c/fields/RetailerOptions__c.field-meta.xml
<CustomField>
    <fullName>RetailerOptions__c</fullName>
    <description>山本</description>
    <label>販売店オプション</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>