force-app/main/default/objects/PurchaseOrder__c/fields/RetailerOptions_Billing__c.field-meta.xml
<CustomField>
    <fullName>RetailerOptions_Billing__c</fullName>
    <description>山本</description>
    <label>販売店オプション(請求)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>