force-app/main/default/objects/PurchaseOrder__c/fields/RetailManagement__c.field-meta.xml
<CustomField>
    <fullName>RetailManagement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>山本</description>
    <label>小売管理</label>
    <referenceTo>RetailManagement__c</referenceTo>
    <relationshipLabel>注文書</relationshipLabel>
    <relationshipName>PurchaseOrder</relationshipName>
    <type>Lookup</type>
</CustomField>