force-app/main/default/objects/PurchaseOrder__c/fields/StampFee__c.field-meta.xml
<CustomField>
    <fullName>StampFee__c</fullName>
    <description>山本</description>
    <formula>StampFee_Billing__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>印紙代</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>