force-app/main/default/objects/PurchaseOrder__c/fields/StampFee_Billing__c.field-meta.xml
<CustomField>
    <fullName>StampFee_Billing__c</fullName>
    <description>山本</description>
    <label>印紙代(請求)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>