force-app/main/default/objects/PurchaseOrder__c/fields/TestRegistrationFee__c.field-meta.xml
<CustomField>
    <fullName>TestRegistrationFee__c</fullName>
    <description>山本</description>
    <formula>TestRegistrationFee_Billing__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>検査登録費用</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>