force-app/main/default/objects/PurchaseOrder__c/fields/TestRegistrationProcedure__c.field-meta.xml
<CustomField>
    <fullName>TestRegistrationProcedure__c</fullName>
    <description>山本</description>
    <label>検査登録手続き</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>