force-app/main/default/objects/PurchaseOrder__c/fields/TradeinCarProcedures_Billing__c.field-meta.xml
<CustomField>
    <fullName>TradeinCarProcedures_Billing__c</fullName>
    <description>山本</description>
    <label>下取り車諸手続き(請求)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>