force-app/main/default/objects/PurchaseOrder__c/fields/TradeInVehicleExpenses__c.field-meta.xml
<CustomField>
    <fullName>TradeInVehicleExpenses__c</fullName>
    <description>山本</description>
    <formula>TradeInVehicleExpenses_Billing__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>下取車諸費用</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>