force-app/main/default/objects/PurchaseOrder__c/fields/VehicleLiabilityInsuranc__c.field-meta.xml
<CustomField>
    <fullName>VehicleLiabilityInsuranc__c</fullName>
    <description>山本</description>
    <formula>VehicleLiabilityInsuranc_Billing__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>自賠責保険料</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>