force-app/main/default/objects/PurchaseOrder__c/fields/VehicleLiabilityInsuranc_Billing__c.field-meta.xml
<CustomField>
    <fullName>VehicleLiabilityInsuranc_Billing__c</fullName>
    <description>山本</description>
    <label>自賠責保険料(請求)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>