force-app/main/default/objects/PurchaseOrder__c/fields/VehicleLiabilityInsurancUnearned_Billing__c.field-meta.xml
<CustomField>
    <fullName>VehicleLiabilityInsurancUnearned_Billing__c</fullName>
    <description>山本</description>
    <label>自賠責未経過相当額(請求)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>