force-app/main/default/objects/PurchaseOrder__c/fields/VehiclePrice_Billing__c.field-meta.xml
<CustomField>
    <fullName>VehiclePrice_Billing__c</fullName>
    <description>山本</description>
    <label>車両本体価格(請求)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>